--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </div>
       </div>
       <div class="action" id="home">
-        <div>An innovative Igala<br> language and language <br> technology solutions Organization</div>
+        <div>An innovative Igala<br> language and language <br> technology solutions</div>
         <p>Connecting Igala to <span>Technology</span> <br> in their <span>Own Languages</span><br></p>
       </div>
     </div>
