update home contents

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     </div>
     <div class="body">
       <div>
-        <p>We offer:<br><span>Translation, Transcription, Interpretation, Proofreading and Editing and other language services.</span></p>
+        <p>We work on:<br><span>Translation, Transcription, Interpretation, Proofreading and Editing and other language services.</span></p>
       </div>
       <div>
         <p>We believe in the power of language to transmit culture and help innovation. Our work in language technology research and development is intended to help empower languages, particularly Igala languages, to better adapt to technology. <a href="#contact"><b>Contact us.​</b></a></p>
